--- a/Server/package.json
+++ b/Server/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.3.0",
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.7.0",
     "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.15",
     "@types/qrcode": "^1.5.5",
@@ -43,7 +43,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.5.0",
     "firebase-admin": "^12.0.0",
@@ -55,7 +55,9 @@
     "luxon": "^3.6.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.10",
     "openai": "^4.90.0",
+    "prisma": "^6.7.0",
     "qrcode": "^1.5.4",
     "query-string": "^7.1.3",
     "twilio": "^5.4.2",
